--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Postcard</title>
+    <title>IG - Postcard</title>
     <link rel="stylesheet" href="/css/style.css"  type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0eaaa0be9c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- iflex-container crea el div padre -->
     <div class="flex-container">
         <div class="tarjeta">
-            <div class="flex-titulo">                
-                <div class="title"> My Postcard</div>
-                <div class="logo"><img src="/img/rigoberto.png" alt="" width="75px"></div>
+            <div class="flex-titulo"> 
+                <div class="logo">
+                    <p><i class="fab fa-html5 fa-2x"></i></p>
+                    &nbsp HTML5<br>
+                    &nbsp Rigoberto
+                </div>
+                <div class="icono1">
+                    <p><i class="fas fa-ellipsis-v fa-2x"></i></p>
+                </div>
             </div>
-            <!-- contenio del ppostcard -->
-            <div class="flex-contenido">
-                <div class="flex-cont_izq">
-                    <p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Curse!
-                    <br><br>
-                    This is cool, can't wait to start doing mor stuff!
+            <div class="imagen">
+                <img src="/img/flowers.jpg" alt="Photo" width="100%">
+            </div>
+            <div class="acciones">
+                <div class="MG">
+                    <p><i class="far fa-heart fa-2x"></i>
+                        <i class="far fa-comment fa-2x"></i>
+                        <i class="far fa-paper-plane fa-2x"></i>
                     </p>
                 </div>
-                <div class="flex-cont_der">
-                    <p class="derecho">Some Name</p>
-                    <p class="derecho">Some Email</p>
-                    <p class="derecho">Some Comment</p>
+                <div class="marcador">
+                    <p><i class="far fa-bookmark fa-2x"></i></p>
                 </div>
             </div>
-            <!-- boton -->
-            <div class="boton">
-                <button>Send My Postcard</button>
+            <div class="comment">
+                <P>Liked by <b>4GeekAcademy, html5, Web</b> and <b>100,000 others</b></P>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet et consectetur unde, deserunt architecto, sint suscipit, quos deleniti iure excepturi numquam alias a maxime dicta quas incidunt itaque. Corrupti, sit.</P>
             </div>
         </div>
     </div>
